--- a/Card.css
+++ b/Card.css
@@ -12,6 +12,7 @@ body{
     width: 100%;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     /* vertical alignment */
     align-items: center; 
     /* horizontal alignment */
