--- a/carousel.css
+++ b/carousel.css
@@ -26,7 +26,7 @@
     width: 100%;
     height: 100%;
     opacity: 0; /* Make slides initially invisible */
-    transition: opacity 2s ease-out, transform 0s ease-in; /* Opacity fades in slowly, scaling happens quickly */
+    /* transition: opacity 2s ease-out, transform 0s ease-in; Opacity fades in slowly, scaling happens quickly */
 }
 
 /* Ensure images take up the full slide */
