--- a/Card.css
+++ b/Card.css
@@ -40,7 +40,7 @@ body{
     display:flex;
     /* align content to the end of the flex region */
     align-items: flex-end;
-    transition: .6s cubic-bezier( .28, -0.03,0, .99);
+    /* transition: .6s cubic-bezier( .28, -0.03,0, .99); */
     box-shadow: 0px 10px 30px -5px rgba(0,0,0,0.8);
 }
 
@@ -63,7 +63,7 @@ body{
 } 
 
 .card > .row > .description{
-    border: solid black 2px;
+    /* border: solid black 2px; */
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -72,8 +72,8 @@ body{
     width:520px;
     opacity: 10;
     transform: translateY(30px);
-    transition-delay: .3s;
-    transition: all .3s ease;
+    /* transition-delay: .3s;
+    transition: all .3s ease; */
 }
 
 .description p{
