--- a/Card.css
+++ b/Card.css
@@ -8,6 +8,14 @@
 body{
     background-color: #eeeeea;
 }
+
+.new-today h1 {
+    font: 400 150px/1.3 'Lobster Two', Helvetica, sans-serif;
+    color: #2b2b2b;
+    text-shadow: 1px 1px 0px #ededed, 4px 4px 0px rgba(0,0,0,0.15);
+    margin-bottom: 200px;
+}
+
 .wrapper{
     width: 100%;
     height: 100vh;
